# QuiltingHelp

./: CMakeLists.txt  README.md  configure.cmd  configure.sh
QuiltingHelp/: CMakeLists.txt  main.cpp
depends_manager/: CMakeLists.txt
